[gd_scene load_steps=3 format=2]

[ext_resource path="res://RecipeBook/recipe_image.png" type="Texture" id=1]
[ext_resource path="res://RecipeBook/BookEntry.gd" type="Script" id=2]

[node name="BookEntry" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="recipe_image" type="Sprite" parent="."]
position = Vector2( 60, 120 )
texture = ExtResource( 1 )

[node name="Name" type="RichTextLabel" parent="."]
margin_left = 10.0
margin_top = 13.0
margin_right = 97.0
margin_bottom = 36.0

[node name="Description" type="RichTextLabel" parent="."]
margin_left = 12.0
margin_top = 44.0
margin_right = 111.0
margin_bottom = 205.0

[node name="Back" type="Button" parent="."]
margin_left = 9.0
margin_top = 187.0
margin_right = 27.0
margin_bottom = 207.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Forward" type="Button" parent="."]
margin_left = 92.0
margin_top = 186.0
margin_right = 110.0
margin_bottom = 206.0
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Forward" to="." method="_on_Forward_pressed"]
